[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="GameTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 50.0
margin_right = 300.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "PING BLAST"
align = 1

[node name="TopScore" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "TOP:"
align = 2

[node name="TopValue" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 52.0
margin_right = -20.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
custom_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "PLAY"

[node name="LeaderboardButton" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "LEADERBOARD"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 400.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 400.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "QUIT"

[node name="UserLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -50.0
margin_right = 500.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 3 )
text = "Player: Anonymous"
margin_right = 375.0
margin_bottom = -183.0
custom_fonts/font = SubResource( 1 )
text = "PING BLAST"

[node name="AuthorLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -57.0
custom_fonts/font = SubResource( 2 )
text = "2022 - djalexkidd"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 170.5
margin_right = -72.0
margin_bottom = 213.5
custom_fonts/font = SubResource( 4 )
text = "Top:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopValue" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = 171.0
margin_right = 182.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -95.5
margin_right = 196.0
margin_bottom = -32.5
custom_fonts/font = SubResource( 3 )
text = "TITLE_PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TateButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -35.0
margin_right = 335.0
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
toggle_mode = true
text = "TITLE_MODE_NORMAL"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = 32.5
margin_right = 196.0
margin_bottom = 95.5
custom_fonts/font = SubResource( 3 )
text = "TITLE_QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 1208.0
margin_top = 648.0
margin_right = 1272.0
margin_bottom = 712.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="TextureButton" parent="."]
margin_left = 1208.0
margin_top = 576.0
margin_right = 1272.0
margin_bottom = 640.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="TateButton" to="." method="_on_TateButton_toggled"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
